--- a/src/components/presentational/select/index.module.scss
+++ b/src/components/presentational/select/index.module.scss
@@ -7,12 +7,12 @@
 
 .select {
   position: relative;
-
+  height: 100%;
   .selectedOption {
     display: flex;
     align-items: center;
     justify-content: space-between;
-
+    height: 100%;
     font-size: typo.$xs;
     padding: spacings.$s-2 spacings.$s-4;
     white-space: nowrap;
