style: adjust styling of ArbitrationDetails for mobile view

--- a/src/components/others/route_article/arbitrationDetails/appeal/index.module.scss
+++ b/src/components/others/route_article/arbitrationDetails/appeal/index.module.scss
@@ -18,13 +18,16 @@
 
     .appealOptions {
       display: flex;
+      flex-wrap: wrap;
       justify-content: space-between;
       gap: spacings.$s-4;
     }
 
     .footer {
       display: flex;
+      flex-wrap: wrap;
       justify-content: space-between;
+      align-items: center;
 
       .label {
         display: flex;
