feat: add landing logo into header

--- a/src/components/others/header/index.module.scss
+++ b/src/components/others/header/index.module.scss
@@ -3,7 +3,10 @@
 
 .header {
   margin-bottom: spacings.$s-5;
-
+ display: flex;
+ flex-direction: column;
+ align-items: center;
+ justify-content: center;
   text-align: center;
 
   h1{
