feat: crowdfunding withdrawal card
plus a few touches for bugs and visual adjustments

--- a/src/routes/article/index.module.scss
+++ b/src/routes/article/index.module.scss
@@ -5,6 +5,8 @@
   display: flex;
   justify-content: center;
 
+  margin-bottom: spacings.$s-20;
+
   button + button {
     margin-left: 1rem;
   }
