refactor: delete box shadow

--- a/src/components/presentational/cardCrowdfundingWithdrawal/index.module.scss
+++ b/src/components/presentational/cardCrowdfundingWithdrawal/index.module.scss
@@ -14,7 +14,7 @@
   border-radius: spacings.$s-1;
   color: hsl(var(--dark-orchestra-600));
 
-  box-shadow: 0rem 0.5rem 1rem 0rem hsl(var(--english-breakfast-600), 0.5);
+  //box-shadow: 0rem 0.5rem 1rem 0rem hsl(var(--english-breakfast-600), 0.5);
 
 
   svg{
