--- a/src/components/presentational/timeline/index.module.scss
+++ b/src/components/presentational/timeline/index.module.scss
@@ -20,7 +20,7 @@
 }
 :global(.ant-steps-label-vertical .ant-steps-item-tail) {
   margin-left: 3.5rem;
-  padding: 5px 28px;
+  padding: spacings.$s-1 spacings.$s-7;
 }
 
 .timelineSteps :global {
@@ -110,9 +110,9 @@
   .ant-steps-vertical > .ant-steps-item > .ant-steps-item-container > .ant-steps-item-tail {
     left: spacings.$s-5;
     top: spacings.$s-4;
-    padding: 27px 0 1px;
+    padding: 1.65rem 0 1px;
   }
   .ant-steps-vertical > .ant-steps-item {
-    margin-bottom: 20px;
+    margin-bottom: spacings.$s-4;
   }
 }
