--- a/src/components/others/route_article/arbitrationDetails/index.module.scss
+++ b/src/components/others/route_article/arbitrationDetails/index.module.scss
@@ -1,5 +1,7 @@
 @use "src/stylesheets/variables/spacings";
 @use "src/stylesheets/variables/typo";
+@use "src/stylesheets/variables/breakpoints";
+
 
 .arbitrationDetails {
   .titleWrapper {
@@ -35,7 +37,7 @@
       }
     }
 
-    @media (max-width: 780px) {
+    @media (max-width: breakpoints.$md) {
       flex-flow: column wrap;
       margin-top: spacings.$s-6;
       padding-top: spacings.$s-4;
