--- a/src/components/others/route_article/arbitrationDetails/evidence/index.module.scss
+++ b/src/components/others/route_article/arbitrationDetails/evidence/index.module.scss
@@ -39,4 +39,10 @@
       margin-bottom: spacings.$s-1;
     }
   }
+
+  .button {
+    display: flex;
+    justify-content: center;
+    margin-top: spacings.$s-6;
+  }
 }
