--- a/src/components/others/route_article/arbitrationDetails/vote/index.module.scss
+++ b/src/components/others/route_article/arbitrationDetails/vote/index.module.scss
@@ -12,7 +12,7 @@
   }
   .cardWrapper {
     width: 60%;
-    margin: spacings.$s-4 auto;
+    margin: spacings.$s-4 auto spacings.$s-10;
     display: flex;
     justify-content: center;
     gap: spacings.$s-10;
