--- a/src/components/others/navigation/index.module.scss
+++ b/src/components/others/navigation/index.module.scss
@@ -16,6 +16,8 @@ $body-margin: 2.5rem;
   align-items: center;
   height: 3.5rem;
   z-index: 1000;
+  border-bottom: 1px solid hsl(var(--english-breakfast-600));
+  border-top: 1px solid hsl(var(--english-breakfast-600));
 
   &.fixedAtTop {
     position: fixed;
@@ -49,7 +51,6 @@ $body-margin: 2.5rem;
     display: flex;
     flex-direction: row;
   }
-
 }
 
 .overlay {
