--- a/src/components/others/route_article/content/index.module.scss
+++ b/src/components/others/route_article/content/index.module.scss
@@ -1,7 +1,7 @@
 @use "src/stylesheets/variables/spacings";
 
 .title {
-  margin-bottom: 0.75rem;
+  margin-bottom: spacings.$s-5;
 
   & + span {
     vertical-align: super;
@@ -18,6 +18,6 @@
   margin-bottom: spacings.$s-10;
 
   span + span {
-    margin-left: 0.25rem;
+    margin-left: spacings.$s-2;
   }
 }
