--- a/src/stylesheets/_layout.scss
+++ b/src/stylesheets/_layout.scss
@@ -3,7 +3,7 @@ html {
 }
 
 body {
-  height: auto;
+  height: fit-content;
   min-height: 100vh;
   margin: 0;
   display: flex;
@@ -27,21 +27,20 @@ header {
   padding-right: 2.5rem;
 }
 
-header+nav:first-of-type {
-  margin: 0 2.5rem;
+header + nav:first-of-type {
+  margin: 0 1.75rem;
   position: sticky;
-  top:0 // Go sticky when top distance is zero
+  top: 0; // Go sticky when top distance is zero
 }
 
 main {
-  padding: 0 2.5rem;
+  padding: 0 1.75rem;
 
   > section {
     padding: 3rem 0;
     max-width: 1200px;
     margin-left: auto;
     margin-right: auto;
-
   }
 }
 
