--- a/src/stylesheets/_base.scss
+++ b/src/stylesheets/_base.scss
@@ -41,7 +41,7 @@ body {
 
 hr {
   border: none;
-  height: 0.025rem;
+  height: 2px;
   margin-block: 0;
 }
 
@@ -58,6 +58,7 @@ footer svg {
 
   font-weight: normal;
   line-height: 1.4;
+  border-width: 2px;
 }
 
 h1 {
