--- a/src/components/presentational/listArticlesItem/index.module.scss
+++ b/src/components/presentational/listArticlesItem/index.module.scss
@@ -1,5 +1,6 @@
 @use "src/stylesheets/variables/typo";
 @use "src/stylesheets/variables/spacings";
+@use "src/stylesheets/variables/breakpoints";
 
 $brownDarken40: hsl(var(--english-breakfast-800), 0.8);
 
@@ -8,7 +9,7 @@ $brownDarken40: hsl(var(--english-breakfast-800), 0.8);
   flex-direction: column;
   flex: 1;
 
-  @media (min-width: 1200px) {
+  @media (min-width: breakpoints.$xl) {
     border: 1px solid hsl(var(--english-breakfast-600));
     border-radius: 1rem;
     transition: border-color 0.6s ease-in-out;
