--- a/src/components/others/formCreate/index.module.scss
+++ b/src/components/others/formCreate/index.module.scss
@@ -55,11 +55,16 @@
 
 .description {
   width: 100%;
+}
+.textFormat {
+  width: 100%;
   margin-bottom: spacings.$s-8;
+
 }
 
 .tags {
   width: 100%;
+
   margin-bottom: spacings.$s-8;
 }
 .bounty {
