refactor: styling fixes

--- a/src/components/others/route_article/content/index.module.scss
+++ b/src/components/others/route_article/content/index.module.scss
@@ -11,6 +11,7 @@
 .description {
   white-space: break-spaces;
   margin-top: spacings.$s-3;
+  margin-bottom: spacings.$s-12;
 }
 
 .containerTag {
