--- a/src/stylesheets/_base.scss
+++ b/src/stylesheets/_base.scss
@@ -59,18 +59,22 @@ footer svg {
   font-weight: normal;
   line-height: 1.4;
   border-width: 1px;
+
 }
 
 h1 {
   font-size: typo.$xxl;
+  //margin-block-start: 0.67em;
 }
 
 h2 {
   font-size: typo.$xl;
+  //margin-block-start: 0.83em;
 }
 
 h3 {
   font-size: typo.$l;
+  //margin-block-start: 1em;
 }
 
 h4 {
@@ -79,6 +83,17 @@ h4 {
 
 p {
   font-size: typo.$s;
+
+}
+ul,ol{
+  margin-block-end: 0;
+}
+p:has(+ul),p:has(+ol) {
+  margin-block-end: 0;
+  margin-bottom: 0;
+}
+
+li{
 }
 
 small {
