refactor: margin block styling

--- a/src/stylesheets/_base.scss
+++ b/src/stylesheets/_base.scss
@@ -64,17 +64,17 @@ footer svg {
 
 h1 {
   font-size: typo.$xxl;
-  //margin-block-start: 0.67em;
+  margin-block-start: 0.67rem;
 }
 
 h2 {
   font-size: typo.$xl;
-  //margin-block-start: 0.83em;
+  margin-block-start: 0.83rem;
 }
 
 h3 {
   font-size: typo.$l;
-  //margin-block-start: 1em;
+  margin-block-start: 1rem;
 }
 
 h4 {
