--- a/src/components/presentational/modal/index.module.scss
+++ b/src/components/presentational/modal/index.module.scss
@@ -1,27 +1,27 @@
 @use "src/stylesheets/variables/typo";
 @use "src/stylesheets/variables/spacings";
 
-$colorShadow1: hsl(var(--starbright-700), 0.6);
-$colorShadow2: hsl(var(--english-breakfast-600), 0.25);
-$colorShadow3: hsl(var(--english-breakfast-600), 0.25);
+.modal {
 
-:global(.ant-modal-content) {
-  color: hsl(var(--dark-orchestra-600));
-  border-radius: 20px;
+  :global(.ant-modal-content) {
+    color: hsl(var(--dark-orchestra-600));
+    border-radius: 20px;
 
-  background: hsl(var(--background));
+    background: hsl(var(--background));
+  }
+
+  :global(.ant-modal-body) {
+    padding: spacings.$s-7;
+  }
+
+  :global(.ant-modal-mask) {
+    background-color: hsl(var(--english-breakfast-900), 0.8);
+  }
+
+  :global(.anticon) svg {
+    width: spacings.$s-6;
+    height: spacings.$s-6;
+    margin-top: spacings.$s-4;
+  }
 }
 
-:global(.ant-modal-body) {
-  padding: spacings.$s-7;
-}
-
-:global(.ant-modal-mask) {
-  background-color: hsl(var(--english-breakfast-900), 0.8);
-}
-
-:global(.anticon svg) {
-  width: spacings.$s-6;
-  height: spacings.$s-6;
-  margin-top: spacings.$s-4;
-}
