--- a/src/routes/home/index.module.scss
+++ b/src/routes/home/index.module.scss
@@ -2,112 +2,299 @@
 @use "src/stylesheets/variables/typo";
 @use "src/stylesheets/variables/breakpoints";
 
-.container {
-  margin: spacings.$s-8;
+.sectionGrid {
+  display: grid;
+  grid-template-columns: 1fr;
+  margin-bottom: spacings.$s-16;
+  @media only screen and (min-width: 780px) {
+    grid-template-columns: [col1-start]5fr [col1-end col2-start]1fr [col2-end col3-start]2fr [col3-end col4-start]0fr [col4-end col5-start]2fr [col5-end col6-start]1fr [col7]5fr;
+    grid-auto-rows: auto;
+    gap: 0px 25px;
+    margin-bottom: 10rem;
+  }
+}
 
-  @media (min-width: breakpoints.$md) {
-    padding: 0 spacings.$s-7;
-    margin-top: spacings.$s-18;
+.heroGrid {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  margin-bottom: spacings.$s-16;
+  @media only screen and (min-width: 780px) {
+    padding: 0 spacings.$s-16;
   }
 }
 
 .home {
-  .banner {
-    width: 100%;
-    height: fit-content;
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+  min-height: 100vh;
 
-    img {
-      border: 4px solid hsl(var(--english-breakfast-900));
-      border-radius: spacings.$s-1;
-    }
+  @media only screen and (min-width: 980px) {
+    padding: 0 spacings.$s-16;
   }
 
-  img {
-    width: 100%;
-    object-fit: contain;
-  }
+  .sectionHero {
+    .heroContainer {
+      position: relative;
+      padding: spacings.$s-6 spacings.$s-6;
+      @media only screen and (min-width: 480px) {
+        margin: 0 2rem;
+        padding: spacings.$s-16 spacings.$s-6;
+      }
 
-  .intro {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    margin-top: spacings.$s-8;
-    color: hsl(var(--dark-orchestra-600));
+      @media only screen and (min-width: 980px) {
+        margin: 0 6rem;
+        padding: spacings.$s-16 spacings.$s-6;
+      }
 
-    h1 {
-      font-size: typo.$xl;
-      font-weight: bold;
-    }
-
-    .slogan {
-      font-size: typo.$m;
-      text-align: center;
-    }
-  }
-
-  .hero {
-    width: 100%;
-    margin-top: spacings.$s-8;
-  }
-
-  .section {
-    width: 100%;
-    padding: spacings.$s-7 0;
-
-    .title {
-      font-size: 3rem;
-      margin-bottom: spacings.$s-2;
-    }
-
-    .contentWrapper {
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      gap: spacings.$s-10;
-      margin-top: spacings.$s-10;
+      grid-column: 1 / -1;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      &::before,
+      &::after {
+        content: "";
+        position: absolute;
+        width: 80%;
+        height: 1px;
+        background-color: black;
+      }
+      &::after {
+        top: 0;
+        left: 10%;
+      }
+      &::before {
+        bottom: 0;
+        left: 10%;
+      }
 
       .content {
-        grid-column: span 1;
+        &::before,
+        &::after {
+          content: "";
+          position: absolute;
+          height: 80%;
+          width: 1px;
+          background-color: black;
+        }
+        &::after {
+          top: 10%;
+          left: 0;
+        }
+        &::before {
+          top: 10%;
+          right: 0;
+        }
+        .title {
+          font-size: typo.$xl;
+          text-align: center;
+          @media only screen and (min-width: 780px) {
+            font-size: typo.$xxl;
+          }
+        }
+        .subTitle {
+          margin-top: spacings.$s-4;
+          text-align: center;
+          font-style: italic;
+        }
       }
+    }
+    .text {
+      grid-column: 1/-1;
+      text-align: justify;
+      margin-top: spacings.$s-6;
+      @media only screen and (min-width: 780px) {
+        column-count: 2;
+        column-gap: 32px;
+      }
+    }
+  }
 
-      @media (min-width: breakpoints.$md) {
-        gap: spacings.$s-16;
+  .sectionIntro {
+    .banner {
+      grid-column: 1 / -1;
+      img {
+        width: 100%;
+        object-fit: contain;
       }
     }
 
-    &.reverse {
-      .title {
+    .text {
+      grid-column: 1 / -1;
+      text-align: justify;
+      margin-top: spacings.$s-6;
+      @media only screen and (min-width: 780px) {
+        column-count: 2;
+        column-gap: 50px;
+      }
+      @media only screen and (min-width: 980px) {
+        column-count: 3;
+      }
+    }
+  }
+
+  .sectionWhat {
+    .title {
+      font-size: typo.$l;
+      margin-bottom: spacings.$s-6;
+      @media only screen and (min-width: 780px) {
+        grid-column: 1 / span 3;
+        text-align: left;
+      }
+      @media only screen and (min-width: 980px) {
+        grid-column: 1;
+        text-align: left;
+      }
+    }
+    .firstParagraph {
+      text-align: justify;
+      margin-bottom: spacings.$s-6;
+
+      @media only screen and (min-width: 780px) {
+        grid-column: 1 / span 3;
+      }
+      @media only screen and (min-width: 980px) {
+        grid-column: 2 / span 2;
+      }
+    }
+    .secondParagraph {
+      text-align: justify;
+      margin-top: spacings.$s-6;
+      @media only screen and (min-width: 780px) {
+        grid-column: 1 / -1;
+      }
+      @media only screen and (min-width: 980px) {
+        grid-column: 1 / span 3;
+        grid-row: 2;
+      }
+    }
+    .image {
+      img {
+        width: 100%;
+        height: 100%;
+        max-height: 400px;
+        object-fit: cover;
+      }
+      @media only screen and (min-width: 780px) {
+        grid-column: 5 /-1;
+        grid-row: 1 / span 2;
+      }
+      @media only screen and (min-width: 980px) {
+        grid-column: 5 /-1;
+        grid-row: 1;
+      }
+    }
+  }
+
+  .sectionWhy {
+    .title {
+      grid-row: 1;
+      font-size: typo.$xxl;
+      margin-bottom: spacings.$s-10;
+      @media only screen and (min-width: 780px) {
+        grid-column: 1 / span 5;
+      }
+      @media only screen and (min-width: 980px) {
+        grid-column: 3 / -1;
+      }
+    }
+    .secondTitle {
+      grid-column: 1;
+      grid-row: 2;
+      width: 70%;
+      text-align: left;
+      font-size: typo.$l;
+      margin-bottom: spacings.$s-6;
+      @media only screen and (min-width: 780px) {
+        grid-column: 1 / span 4;
+        width: 100%;
+      }
+      @media only screen and (min-width: 980px) {
+        grid-column: 1;
         text-align: right;
       }
-      .contentWrapper {
-        direction: rtl;
-        p {
-          text-align: left;
+    }
+    .firstParagraph {
+      text-align: justify;
+      grid-row: 3;
+      margin-bottom: spacings.$s-6;
+
+      @media only screen and (min-width: 780px) {
+        grid-column: 5 / -1;
+        grid-row: 3;
+      }
+
+      @media only screen and (min-width: 980px) {
+        grid-row: 2;
+        grid-column: 7;
+        padding-left: spacings.$s-6;
+      }
+    }
+    .secondParagraph {
+      text-align: justify;
+      margin-top: spacings.$s-6;
+      @media only screen and (min-width: 780px) {
+        grid-column: 5 / -1;
+        grid-row: 4;
+        margin-top: 0;
+      }
+      @media only screen and (min-width: 980px) {
+        grid-column: 3 / -1;
+        grid-row: 3;
+        margin-top: spacings.$s-6;
+      }
+    }
+    .image {
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+      @media only screen and (min-width: 780px) {
+        grid-column: 1 / span 3;
+        grid-row: 3 / span 2;
+      }
+      @media only screen and (min-width: 980px) {
+        grid-column: col2-end / span 4;
+        grid-row: 2;
+        img {
+          object-fit: cover;
         }
       }
     }
   }
 
-  @media (min-width: breakpoints.$md) {
-    .intro {
-      margin-top: spacings.$s-18;
+  .sectionHow {
+    .title {
+      grid-column: 1 / span 3;
+      grid-row: 1;
+      font-size: typo.$xxl;
+    }
+    .subtitle {
+      grid-column: 1 / span 3;
+      grid-row: 2;
+      margin-bottom: spacings.$s-10;
+      font-style: italic;
+    }
+    .text {
+      grid-column: 1 / -1;
+      grid-row: 3;
+      text-align: justify;
+      margin-bottom: spacings.$s-6;
 
-      h1 {
-        font-size: typo.$xxl;
-      }
-
-      p {
-        width: 60%;
+      @media only screen and (min-width: 480px) {
+        column-count: 2;
+        column-gap: 55px;
       }
     }
-
-    .hero {
-      margin: spacings.$s-18 0;
-    }
-
-    .section {
-      .title {
-        font-size: 5rem;
+    .image {
+      grid-column: 1 /-1;
+      grid-row: 4;
+      img {
+        width: 100%;
+        height: 100%;
+        max-height: 400px;
+        object-fit: cover;
       }
     }
   }
