--- a/src/routes/home/index.module.scss
+++ b/src/routes/home/index.module.scss
@@ -18,9 +18,9 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   margin-bottom: spacings.$s-16;
-  @media only screen and (min-width: 780px) {
+  /*  @media only screen and (min-width: 780px) {
     padding: 0 spacings.$s-16;
-  }
+  } */
 }
 
 .home {
