feat: add TrustScore unit

--- a/src/components/others/route_article/keyMetrics/index.module.scss
+++ b/src/components/others/route_article/keyMetrics/index.module.scss
@@ -9,6 +9,11 @@
 
 .trustScore {
   font-size: typo.$xl;
+
+  .unit {
+    margin-left: spacings.$s-1;
+    font-size: typo.$l;
+  }
 }
 
 .bountyAmount {
